--- a/slides/higher-order-components.html
+++ b/slides/higher-order-components.html
@@ -1,6 +1,6 @@
 <h2>Higher Order Components</h2>
 
-<ul class="list-unstyled">
+<ul class="list-unstyled space-list-items">
     <li class="fragment">
         $$f: \unicode{x2115} \mapsto \unicode{x2115}, x \mapsto y $$
     </li>
