--- a/slides/recompose.html
+++ b/slides/recompose.html
@@ -20,4 +20,7 @@
 
 <aside class="notes">
     redux router not to be confused with react-router-redux formerly known as redux-simple-router
+    <br>
+    abstract common tasks into reusable pices
+
 </aside>
