last minute changes + speaker notes

--- a/slides/benefits.html
+++ b/slides/benefits.html
@@ -1,10 +1,14 @@
 <h2>Benefits</h2>
 
-<p>Microcomponentization</p>
-<p>Replace Class- with Stateless Function Components</p>
-<p>Encourages <i>smart</i> vs <i>dumb</i> pattern</p>
-<p>Split behavior and structure</p>
-<p>Decorators ?!</p>
+<ul class="centerlist">
+    <li class="fragment">Microcomponentization</li>
+    <li class="fragment">Replace Class- with Stateless Function Components</li>
+    <li class="fragment">Encourages <i>smart</i> vs <i>dumb</i> domponent pattern</li>
+    <li class="fragment">Split behavior and structure</li>
+    <li class="fragment">Decorators ?!</li>
+</ul>
+
+
 
 <aside class="notes">
     Stateless function components: prevent abuse of setState, easier to reason about, encourage,
