--- a/slides/drawbacks.html
+++ b/slides/drawbacks.html
@@ -1,8 +1,11 @@
 <h2>Drawbacks</h2>
 
-<p>Higher order functions</p>
-<p>Abstraction hides details</p>
-<p>Slight Performance overhead</p>
+
+<ul class="centerlist">
+    <li class="fragment">Higher order functions</li>
+    <li class="fragment">Abstraction hides details</li>
+    <li class="fragment">Slight performance overhead</li>
+</ul>
 
 <aside class="notes">
     1). Higher order functions not everyone cup of tea<br>
