--- a/slides/example-vi.html
+++ b/slides/example-vi.html
@@ -2,5 +2,6 @@
 
 <img src="img/Screen Shot 2016-02-22 at 02.13.51.png" class="code-example" alt="">
 
-
 <aside class="notes">Example not perfect, creates tight coupling</aside>
+
+<small>Little Mistake: For <code>this.</code> to work, use function expression instead of arrow function</small>
