--- a/slides/me.html
+++ b/slides/me.html
@@ -4,7 +4,7 @@
 <ul style="float:left; width: calc( 100% - 200px )">
     <li>CTO & Co-Founder at <a href="https://pixsy.com">Pixsy</a></li>
     <li>Hooked on React for 1.5 years</li>
-    <li>Functional Programming & Internet of Things</li>
+    <li>Reactive Programming & Internet of Things</li>
     <li>Twitter: <a href="https://twitter.com/trueterBS">@trueterbs</a></li>
     <li>Github: <a href="https://github.com/trueter">trueter</a></li>
 </ul>
