--- a/slides/recompose.html
+++ b/slides/recompose.html
@@ -6,7 +6,7 @@
         <span>from the author of</span>
         <ul>
             <li>flummox</li>
-            <li>redux-router</li>
+            <li>redux-simple-router</li>
             <li>flux-standard-action</li>
         </ul>
     </li>
