--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             progress: true,
             history: true,
             center: true,
-              showNotes: true,
+              showNotes: false,
 
             transition: 'slide', // none/fade/slide/convex/concave/zoom
 
