--- a/slides/example-iiiii.html
+++ b/slides/example-iiiii.html
@@ -2,3 +2,4 @@
 
 <img src="img/Screen Shot 2016-02-22 at 02.14.06.png" class="code-example" alt="">
 
+<small>Little Mistake: For <code>this.</code> to work, use function expression instead of arrow function</small>
